--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <h2> <a href="https://github.com/Swayam595/Simon-Game/tree/main" style="color:tan">Source Code</a> </h2>
   <h1 id="level-title">Press A Key to Start</h1>
   <div class="container">
     <div lass="row">
